// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`highlighted-element 1`] = `
<div
  className="schema-element highlighted undefined"
  onClick={[Function]}
  role="button"
>
  Highlighted_element
</div>
`;

exports[`mapped-element 1`] = `
<div
  className="schema-element mapped undefined"
  onClick={[Function]}
  role="button"
>
  Mapped_element
</div>
`;

exports[`single-element 1`] = `
<div
  className="schema-element undefined"
  onClick={[Function]}
  role="button"
>
  Single_element
</div>
`;
